# polymarket-timesfm-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  FINAL_SUMMARY.md  GITHUB_SETUP.md  Makefile  README.md  all_market_data_timesfm.json  docker-compose.yml  fetch_all_market_data.py  fetch_historical_data.py  fetch_polymarket_data.py  fetch_top_markets.py  final_timesfm_forecast_table.md  final_timesfm_results.json  polymarket_dashboard.py  polymarket_data.json  project_structure.md  pyproject.toml  real_timesfm_forecast_table.md  requirements.txt  run_dashboard.sh  run_final_timesfm.py  run_real_forecast.py  run_real_timesfm.py  run_timesfm_on_markets.py  save_market_data_simple.py  simple_forecast_analysis.py  test_api.py  test_price.py  timesfm_forecast.py  timesfm_forecast_results.json  timesfm_forecast_table.md  timesfm_input_data.json  timesfm_market_data.json  timesfm_ready_data.json  trading_analysis_results.json  us-forces-enter-iran-by-april-30-899_prices.csv  us-forces-enter-iran-by-december-31-573-642-385-371-179-425-262_prices.csv  (+9 more)
.github/workflows/: ci.yml
config/: default.yaml  env.example  prometheus.yml  risk_parameters.yaml  trading_strategies.yaml
data/: markets.csv  markets_summary.csv  pilot_config.yaml  trading.db  val_config_balanced.yaml
data/forecasts/: market_analysis_20260403_073717.csv  real_timesfm_20260404_060121.json  real_timesfm_20260404_060315.json  real_timesfm_forecasts_20260403_111015.csv  real_timesfm_forecasts_20260403_111423.csv  timesfm2p5_forecasts_20260404_014548.csv  timesfm2p5_forecasts_20260404_014548.json  timesfm_forecasts_20260403_102210.csv
data/observations/: observations_20260404.csv  outcomes_20260404.csv
data/price_history/: price_history_0x250c16_20260403_110135.csv  price_history_0x250c16_20260403_111408.csv  price_history_0x40b063_20260403_110138.csv  price_history_0x51e8c8_20260403_111410.csv  price_history_0x6d0e09_20260403_110137.csv  price_history_0x6d0e09_20260403_111409.csv  price_history_0x833cc6_20260403_110135.csv  price_history_0x9df006_20260403_110136.csv  price_history_0x9df006_20260403_111408.csv  price_history_0xcd836e_20260403_111410.csv
data/real_data/: real_data_analysis_20260404_025939.md  real_market_data_20260404_025939.json
docs/: production-readiness-checklist.md  repo_research_report.md  trade-journal-integration.md
scripts/: README.md  autonomous_phase2.py  btc_15m_monitor.py  btc_15m_monitor_v2.py  optimize_strategy.py  run_btc_forecast.py  run_forecast.py  run_local_ci.sh  run_paper_trading.py  run_validation.py  test_ws_instrumented.py
scripts/dashboard/: README.md  app.py  app_db.py  app_v2.py  run_dashboard.sh
scripts/dashboard/templates/: base.html  index.html  positions.html  signals.html  status.html  trades.html
src/: __init__.py
src/analysis/: __init__.py  indicators.py  outcome_evaluator.py  performance_analyzer.py  signal_aggregator.py
src/bot/: __init__.py  config_manager.py  main_bot.py  scheduler.py
src/data_collection/: __init__.py  btc_price_fetcher.py  btc_websocket.py  ccxt_btc.py  data_store.py  feature_engineering.py  polymarket_client.py  polymarket_ws_client.py
src/forecasting/: __init__.py  forecast_evaluator.py  forecaster.py  run_forecast.py  run_forecast_real.py  signal_generator.py  timesfm_forecaster.py
src/polymarket_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/trading/: __init__.py  enhanced_executor.py  kelly_sizer.py  order_executor.py  order_executor_v2.py  performance_tracker.py  portfolio_manager.py  risk_manager.py  stop_loss.py  trade_executor.py  trade_journal.py
src/utils/: __init__.py  cache.py  circuit_breaker.py  data_utils.py  db_persistence.py  logger.py  monitoring.py  time_utils.py  validation.py
tests/: __init__.py  conftest.py  test_btc_fetcher.py  test_forecaster.py  test_order_executor.py  test_polymarket_client.py  test_signal_generator.py
