# Polymarket Trading Bot - Modern Python Packaging
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "polymarket-trading-bot"
dynamic = ["version"]
description = "AI-powered trading bot for Polymarket prediction markets using technical indicators"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["polymarket", "trading", "prediction-markets", "btc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    # Core
    "py-clob-client>=0.17.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    
    # Data & utilities
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    
    # Async/WebSocket
    "websockets>=11.0.0",
    "aiohttp>=3.8.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "structlog>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[project.scripts]
polymarket-bot = "src.cli:main"

[project.urls]
Homepage = "https://github.com/aliimmmss/polymarket-trading-bot"
Repository = "https://github.com/aliimmmss/polymarket-trading-bot"
Documentation = "https://github.com/aliimmmss/polymarket-trading-bot#readme"

[tool.hatch.version]
path = "src/__init__.py"
pattern = "__version__ = \"([^\\\"]+)\""

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/config",
    "/scripts",
    "/tests",
    "/docs",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = "\\.pyi?$"
extend-exclude = """
/(
  # directories
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
)/
"""

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0613",  # unused-argument
]
max-line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.bandit]
skips = ["B101"]  # Skip assert_used warnings
